[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/graphics/tileset_arena.png" type="Texture" id=1]
[ext_resource path="res://player/weapons/Misile.gd" type="Script" id=2]
[ext_resource path="res://player/weapons/MisileTrail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 0.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 57, 59, 6, 3 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.727273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.154545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
resource_local_to_scene = true
offsets = PoolRealArray( 0.16707, 0.653753, 0.910412, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0.454545, 0.454545, 0.454545, 1, 1, 1, 1, 1 )

[node name="Misile" type="Node2D"]
script = ExtResource( 2 )

[node name="MisileArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MisileArea"]
visible = false
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, -1.5 )
texture = SubResource( 4 )
centered = false

[node name="MisileTrail" parent="." instance=ExtResource( 3 )]
points = PoolVector2Array( -2, 0 )
width_curve = SubResource( 2 )
gradient = SubResource( 3 )

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -6, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[connection signal="body_entered" from="MisileArea" to="." method="_on_MisileArea_body_entered"]
